--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <div class="container ">
   <div class=" d-flex align-items-center justify-content-center">
     
-    <h1 class="  mb-5 text-uppercase text-white text-muted">About Me</h1>
+    <h1 id="about" class="  mb-5 text-uppercase text-white text-muted">About Me</h1>
   </div>
   <!-- row start -->
   <div class="row align-items-center">
