--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 
       <!-- header section -->
-     <div class="container-fluid bg-danger algin-items-center  py-5" style="min-height:50vh;">
+     <div class="container-fluid bg-danger algin-items-center  py-5" >
        <div class="container">
 
         <div class="row algin-items-center">
