--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 
 <!-- indent row end -->
 <!-- button -->
-<a href="#" class=" btn btn-lg btn-outline-warning m-4 rounded-pill  text-white  "> Hire Me</a>
-<a href="#" class="btn btn-lg btn-outline-warning mr-4 rounded-pill text-white"> LearnMore</a>
+<a href="#" class=" btn btn-lg btn-outline-warning my-4 rounded-pill  text-white  "> Hire Me</a>
+<a href="#" class="btn btn-lg btn-outline-warning my-4 m-4 rounded-pill text-white"> LearnMore</a>
   </div>
   <!-- row end -->
 </div>
