--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <!-- type text -->
 
             <div class="typed ">
+              <button type="button" class="btn bg-dark text-white rounded-pill  m-2"> Cyber Security Analyst<span class="badge  m-1 "><i class="fas fa-laptop"></i></span></button>
              <button type="button" class="btn bg-success text-white rounded-pill   m-2"> Full Stack Developer<span class="badge  mx-1 "><i class="fas fa-laptop-code"></i></span></button>
              <button type="button" class="btn bg-primary text-white rounded-pill   m-2"> App Developer<span class="badge mx-1 "><i class="fas fa-robot"></i></span></button>
              <button type="button" class="btn bg-warning text-white rounded-pill m-2"> Ui/Ux Developer<span class="badge  mx-1 "><i class="fab fa-uikit"></i></span></button>
