--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar  navbar-expand-lg navbar-dark bg-danger ">
    
       <div class="container">
-        <a class="navbar-brand text-white" href="#">Musthafa</a>
+        <a class="navbar-brand text-white" href="#">KARTHICKEYAN</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarc" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon text-white"></span>
         </button>
