--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row algin-items-center">
           <div class="col  text-center ">
             <h3 class="text-white font-weight-normal mb-3">Hi i'm</h3>
-            <h1 class="display-4 text-uppercase text-white " style="-webkit-text-stroke: 4px #ffffff;">Mohamed <span class="text-warning"> Musthafa</span>
+            <h1 class="display-4 text-uppercase text-white " style="-webkit-text-stroke: 4px #ffffff;">DhatshanaMoorthy<span class="text-warning"> </span>
              </h1>
              <br>
              <h5 class="text-white">Hacker by Passion, Developer by Profession</h5>
