--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <body>
 
 <div class="navbar-section ">
-  <nav class="navbar  navbar-expand-lg navbar-dark bg-danger ">
+  <nav class="navbar  navbar-expand-lg navbar-dark bg-danger shadow ">
    
       <div class="container">
-        <a class="navbar-brand text-white" href="#">PORTFOLIO</a>
+        <a class="navbar-brand text-white h1 " href="#">PORTFOLIO</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarc" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon text-white"></span>
         </button>
@@ -59,7 +59,7 @@
         <div class="row algin-items-center">
           <div class="col  text-center ">
             <h3 class="text-white font-weight-normal mb-3">Hi i'm</h3>
-            <h1 class="display-4 text-uppercase text-white " style="-webkit-text-stroke: 4px #ffffff;">Mohamed Musthafa</h1>
+            <h1 class="display-4 text-uppercase text-white  fw-3" style="-webkit-text-stroke: 4px #ffffff;">Mohamed Musthafa</h1>
              <br>
              <h5 class="text-white">Hacker by Passion, Developer by Profession</h5>
              
