--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar  navbar-expand-lg navbar-dark bg-danger shadow ">
    
       <div class="container">
-        <a class="navbar-brand text-white h1 " href="#">PORTFOLIO</a>
+        <a class="navbar-brand text-white fw-bolder" href="#">PORTFOLIO</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarc" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon text-white"></span>
         </button>
@@ -53,13 +53,13 @@
 </div>
 
       <!-- header section -->
-     <div style="height: 100vh; width: 100%;" class="container-fluid bg-danger algin-items-center  py-5 d-flex align-items-center" >
+     <div class="container-fluid bg-danger algin-items-center  py-5 " >
        <div class="container">
 
         <div class="row algin-items-center">
           <div class="col  text-center ">
             <h3 class="text-white font-weight-normal mb-3">Hi i'm</h3>
-            <h1 class="display-4 text-uppercase text-white  fw-3" style="-webkit-text-stroke: 4px #ffffff;">Mohamed Musthafa</h1>
+            <h1 class="display-4 text-uppercase text-white  fw-3" style="-webkit-text-stroke: 6px #ffffff;">Mohamed Musthafa</h1>
              <br>
              <h5 class="text-white">Hacker by Passion, Developer by Profession</h5>
              
