service hover effect

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="file-regular.svg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
   <body>
 
@@ -448,7 +449,7 @@
    <div class="container">
      <div class="row  d-flex justify-content-center">
        <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
-        <div class="card roundedmb-2 my-2 bg-dark border-primary p-4 text-center" style="width: 18rem;">
+        <div class="card roundedmb-2 my-2 bg-dark border-primary p-4 text-center mb-4 hvr-grow" style="width: 18rem;">
           <i class="fa-solid fa-laptop-code " style="font-size: 75px; text-align: center; color:white" ></i>
            <div class="card-body">
              <h5 class="card-title text-primary">Web Development</h5>
@@ -463,7 +464,7 @@
 
        <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
         
-        <div class="card roundedmb-2 my-2 bg-dark border-danger p-4 text-center" style="width: 18rem;">
+        <div class="card roundedmb-2 my-2 bg-dark border-danger p-4 text-center mb-4 hvr-grow" style="width: 18rem;">
           <i class="fa-solid fa-shield " style="font-size: 75px; text-align: center; color:white" ></i>
            <div class="card-body">
              <h5 class="card-title text-danger">Penetration Testing</h5>
@@ -479,7 +480,7 @@
 
          
           <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="card rounded mb-2 my-2 bg-dark border-success p-4 text-center" style="width: 18rem;">
+            <div class="card rounded mb-2 my-2 bg-dark border-success p-4 mb-4 text-center hvr-grow" style="width: 18rem;">
               <i class="fa-brands fa-android" style="font-size: 75px; text-align: center; color:white" ></i>
                <div class="card-body">
                  <h5 class="card-title text-success">App Development</h5>
@@ -493,11 +494,11 @@
           </div>
           <i class=""></i>
           <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="card rounded mb-2 my-2 bg-dark border-warning p-4 text-center" style="width: 18rem;">
+            <div class="card rounded mb-2 my-2 bg-dark border-warning p-4 text-center hvr-grow" style="width: 18rem;">
               <i class="fas fa-network-wired" style="font-size: 75px; text-align: center; color:white" ></i>
                <div class="card-body">
                  <h5 class="card-title text-warning">Networking</h5>
-                 <p class="card-text text-light">Providing local network infra structure</p>
+                 <p class="card-text text-light">Providing local network infra structure. </p>
                  <button class="btn btn-outline-warning">Read More</button>
                </div>
        </div>
