navbar alignment changes

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <span class="navbar-toggler-icon text-white"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarc">
-          <ul class="navbar-nav mx-auto mb-2">
+          <ul class="navbar-nav mx-auto mb-2 text-center ">
             <li class="nav-item">
-              <a class="nav-link active  bg-outline-dark rounded" aria-current="page" href="#">Home</a>
+              <a class="nav-link active bg-outline-dark rounded " aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
